Fix shelf layout when switching from left-aligned shelf to right-aligned shelf

Fix the issue that when shelf is switched from left-aligned shelf to
right-aligned shelf, the spacing between the edge of the screen to tray
items are not changed.

TEST=Manuel
- change shelf location left to right or right to left.
- change shelf location bottom to right or bottom to left.
- initialize shelf locating on left or right.

BUG=623438

Review-Url: https://codereview.chromium.org/2103113003
Cr-Commit-Position: refs/heads/master@{#403215}

Former-commit-id: eeee71c610e8e6548b94d3abb180fd53d16a487d