ash/common/system/status_area_widget_delegate.cc
@@ -231,6 +231,10 @@ void StatusAreaWidgetDelegate::SetBorderOnChild(views::View* child,
   }
   child->SetBorder(views::Border::CreateEmptyBorder(top_edge, left_edge,
                                                     bottom_edge, right_edge));
+  // Layout on |child| needs to be updated based on new border value before
+  // displaying; otherwise |child| will be showing with old border size.
+  // Fix for crbug.com/623438.
+  child->Layout();
 }
 
 }  // namespace ash
